made the ecosystem section interactable, need to fix spacing of side components and make it mobile friendly

--- a/src/scss/theme/_images.scss
+++ b/src/scss/theme/_images.scss
@@ -30,3 +30,13 @@
 .figure-img {
   margin-bottom: $spacer;
 }
+
+.picture2 {
+  display: none;
+}
+.thumbnail:hover .picture1 {
+  display: none;
+}
+.thumbnail:hover .picture2 {
+  display: block;
+}
